crates/ox_content_i18n/src/mf2/snapshots/ox_content_i18n__mf2__validator__tests__duplicate_option.snap
---
source: crates/ox_content_i18n/src/mf2/validator.rs
expression: errors
---
[
    Mf2Validation {
        message: "duplicate option 'style' in :number",
    },
]
