crates/ox_content_i18n/src/mf2/snapshots/ox_content_i18n__mf2__validator__tests__missing_catch_all.snap
---
source: crates/ox_content_i18n/src/mf2/validator.rs
expression: errors
---
[
    Mf2Validation {
        message: "matcher must include a catch-all variant with all wildcard (*) keys",
    },
]
